@@ -12,8 +12,11 @@ with Magick++ itself.
 <p>
 (5.4.3)<BR>
 <UL>
+  <LI> Bugfix for Magick::Exception memory leak.
   <LI> Bugfix for DrawableGravity class (had stopped working).
   <LI> Bugfix for Image antiAlias() method (wasn't working).
+  <LI> Reimplemented image registration code (which passes image via
+    DrawableCompositeImage).
 
 </UL>
 <p>
